@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19931206
+MANIFEST for ded, version t19931216
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
